test/corpus/links.txt
==================
Simple Internal Link
==================

[[Title]]

---

(source_file
  (section
    (paragraph
      (wikilink
        (wikilink_page
          (page_name_segment))))))

==================
Internal Link with Label
==================

[[Title|Label]]

---

(source_file
  (section
    (paragraph
      (wikilink
        (wikilink_page
          (page_name_segment))
        (page_name_segment)))))

==================
Internal Link with Namespace
==================

[[Namespace:Title]]

---

(source_file
  (section
    (paragraph
      (wikilink
        (wikilink_page
          (page_name_segment))))))

==================
Internal Link with Namespace and Label
==================

[[Namespace:Title|Label]]

---

(source_file
  (section
    (paragraph
      (wikilink
        target: (wikilink_page
          (page_name_segment))
        display: (page_name_segment)))))

==================
Internal Link with Anchor
==================

[[Title#Anchor]]

---

(source_file
  (section
    (paragraph
      (wikilink
        (wikilink_page
          (page_name_segment))))))

==================
Internal Link with Anchor and Label
==================

[[Title#Anchor|Label]]

---

(source_file
  (section
    (paragraph
      (wikilink
        (wikilink_page
          (page_name_segment))
        (page_name_segment)))))

==================
External Link (URL only)
==================

[https://example.com]

---

(source_file
  (section
    (paragraph
      (external_link
        (url)))))

==================
External Link with Label
==================

[https://example.com Label]

---

(source_file
  (section
    (paragraph
      (external_link
        (url)
        (page_name_segment)))))

==================
Bare URL
==================

https://example.com

---

(source_file
  (section
    (paragraph
      (text))))

==================
Multiple Links
==================

[[Internal Link]] and [https://example.com External Link]

---

(source_file
  (section
    (paragraph
      (wikilink
        (wikilink_page
          (page_name_segment)))
      (text)
      (external_link
        (url)
        (page_name_segment)))))

==================
Nested Links Syntax (not valid in MediaWiki)
:error
==================

[[Outer Link|[Inner Link]]]

---

(source_file
  (ERROR
    (wikilink_page
      (page_name_segment))
    (template_name_part)
    (template_name_part)))

==================
Category Link
==================

[[Category:Example]]

---

(source_file
  (section
    (paragraph
      (wikilink
        (wikilink_page
          (page_name_segment))))))

==================
File Link
==================

[[File:Example.jpg]]

---

(source_file
  (section
    (paragraph
      (medialink
        (filename)))))

==================
Image Link with Parameters
==================

[[Image:Example.jpg|thumb|alt=Alt text|Caption]]

---

(source_file
  (section
    (paragraph
      (medialink
        (filename)
        (file_format_token)
        (file_alt_token)
        (file_caption
          (text))))))

==================
Interwiki Link
==================

[[wikt:example]]

---

(source_file
  (section
    (paragraph
      (wikilink
        (wikilink_page
          (page_name_segment))))))

==================
Link with Subpage
==================

[[Main Page/Subpage]]

---

(source_file
  (section
    (paragraph
      (wikilink
        (wikilink_page
          (page_name_segment))))))

==================
Literal square brackets that are not a link
==================

word [or] another [whom] here

---

(source_file
  (section
    (paragraph
      (text))))

==================
Bracketed text alongside a real external link
==================

see [not a link] and [https://example.com here]

---

(source_file
  (section
    (paragraph
      (text)
      (external_link
        (url)
        (page_name_segment)))))

================================================================================
Pipe trick (empty display after pipe)
================================================================================

[[kingdom (biology)|]] and [[Help:Pipe|]]

--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (wikilink
        (wikilink_page
          (page_name_segment)))
      (text)
      (wikilink
        (wikilink_page
          (page_name_segment))))))
