test/corpus/lists.txt
================================================================================
Basic unordered lists
================================================================================

* Item 1
* Item 2
* Item 3

--------------------------------------------------------------------------------

(source_file
  (section
    (unordered_list
      (unordered_list_item
        (list_marker)
        (list_item_content
          (text)))
      (unordered_list_item
        (list_marker)
        (list_item_content
          (text)))
      (unordered_list_item
        (list_marker)
        (list_item_content
          (text))))))

================================================================================
Nested unordered lists
================================================================================

* Item 1
** Subitem 1.1
** Subitem 1.2
* Item 2

--------------------------------------------------------------------------------

(source_file
  (section
    (unordered_list
      (unordered_list_item
        (list_marker)
        (list_item_content
          (text)))
      (unordered_list_item
        (list_marker)
        (list_item_content
          (text)))
      (unordered_list_item
        (list_marker)
        (list_item_content
          (text)))
      (unordered_list_item
        (list_marker)
        (list_item_content
          (text))))))

================================================================================
Basic ordered lists
================================================================================

# Item 1
# Item 2
# Item 3

--------------------------------------------------------------------------------

(source_file
  (section
    (ordered_list
      (ordered_list_item
        (list_marker)
        (list_item_content
          (text)))
      (ordered_list_item
        (list_marker)
        (list_item_content
          (text)))
      (ordered_list_item
        (list_marker)
        (list_item_content
          (text))))))

================================================================================
Mixed ordered and unordered lists
================================================================================

# Item 1
#* Subitem 1.1
#* Subitem 1.2
# Item 2

--------------------------------------------------------------------------------

(source_file
  (section
    (ordered_list
      (ordered_list_item
        (list_marker)
        (list_item_content
          (text))))
    (unordered_list
      (unordered_list_item
        (list_marker)
        (list_item_content
          (text)))
      (unordered_list_item
        (list_marker)
        (list_item_content
          (text))))
    (ordered_list
      (ordered_list_item
        (list_marker)
        (list_item_content
          (text))))))

================================================================================
Lists with special characters
================================================================================

* Item with *bold* text
* Item with [[link]]
* Item with ==heading==

--------------------------------------------------------------------------------

(source_file
  (section
    (unordered_list
      (unordered_list_item
        (list_marker)
        (list_item_content
          (text)))
      (unordered_list_item
        (list_marker)
        (list_item_content
          (text)
          (wikilink
            (wikilink_page
              (page_name_segment)))))
      (unordered_list_item
        (list_marker)
        (list_item_content
          (text))))))

============================================================
Definition list
:error
============================================================
; Definition lists
; term : definition
; semicolon plus term
: colon plus definition
-------------------------------------------------------------------

(source_file
  (paragraph
    (text))
  (paragraph
    (text))
  (paragraph
    (text))
  (paragraph
    (text)))

=======================================
Mixed definitions list
:error
=======================================
; Mixed definition lists
; item 1 : definition
:; sub-item 1 plus term
:: two colons plus definition
:; sub-item 2 : colon plus definition
; item 2 
: back to the main list
-----------------------------------------------------------------------

(source_file
  (paragraph
    (text))
  (paragraph
    (text))
  (paragraph
    (text))
  (paragraph
    (text))
  (paragraph
    (text))
  (paragraph
    (text))
  (paragraph
    (text)))

===========================================================================
Complex nesting or ordered and unordered items
:error
===========================================================================

* Or create mixed lists
*# and nest them
*#* like this
*#*; definitions
*#*: work:
*#*; apple
*#*; banana
*#*: fruits
---------------------------------------------

(source_file
  (unordered_list_item
    (list_marker)
    (list_item_content
      (text))
    (list_marker
      (ordered_list
        (ordered_list_item
          (list_marker)
          (list_item_content
            (text)))
        (list_marker
          (list_marker
            (unordered_list_item
              (list_marker)
              (list_item_content
                (text))
              (list_marker
                (list_marker
                  (unordered_list_item
                    (list_marker)
                    (list_item_content
                      (text))
                    (list_marker
                      (list_marker
                        (unordered_list_item
                          (list_marker)
                          (list_item_content
                            (text))
                          (list_marker
                            (list_marker
                              (unordered_list_item
                                (list_marker)
                                (list_item_content
                                  (text))
                                (list_marker
                                  (list_marker
                                    (unordered_list_item
                                      (list_marker)
                                      (list_item_content
                                        (text))
                                      (list_marker
                                        (list_marker
                                          (list_marker
                                            (list_item_content
                                              (text))

================================================================================
List nested inside a <ref> tag (deferred — see review.md A12)
:skip
================================================================================

<ref>intro
* one
* two</ref>

--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (html_tag
        (html_tag_name)
        (text)
        (unordered_list
          (unordered_list_item
            (list_marker)
            (list_item_content
              (text)))
          (unordered_list_item
            (list_marker)
            (list_item_content
              (text))))
        (html_tag_name)))))

================================================================================
List of templates inside a <ref>, closing tag abutting last item (deferred)
:skip
================================================================================

Text.<ref>{{x|a}}
* {{y|b}}
* {{z|c}}</ref>

--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (text)
      (html_tag
        (html_tag_name)
        (template
          (template_name
            (template_name_part))
          (template_argument
            (template_param_value
              (text))))
        (unordered_list
          (unordered_list_item
            (list_marker)
            (list_item_content
              (text)
              (template
                (template_name
                  (template_name_part))
                (template_argument
                  (template_param_value
                    (text))))))
          (unordered_list_item
            (list_marker)
            (list_item_content
              (text)
              (template
                (template_name
                  (template_name_part))
                (template_argument
                  (template_param_value
                    (text)))))))
        (html_tag_name)))))
