test/corpus/media.txt
================================================================================
Simple File link
================================================================================

[[File:Kim Clijsters 2006.jpg]]

--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (medialink
        (filename)))))

================================================================================
File link with several attributes
================================================================================

[[File:Kim Clijsters 2006.jpg|thumb|left|Kim Clijsters was WTA Awards|WTA Player of the Year in 2005 and 2010]]


--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (medialink
        (filename)
        (file_format_token)
        (file_alignment_token)
        (file_caption
          (text))
        (file_caption
          (text))))))

================================================================================
File link with caption as link
================================================================================

[[File:Kim Clijsters 2006.jpg|thumb|left|[[Kim Clijsters was WTA Awards|WTA Player of the Year in 2005 and 2010]]]]

--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (medialink
        (filename)
        (file_format_token)
        (file_alignment_token)
        (file_caption
          (wikilink
            (wikilink_page
              (page_name_segment))
            (page_name_segment)))))))

================================================================================
File link with alt=
================================================================================

[[File:Example.jpg|thumb|right|200px|alt=An example image|This is the caption]]

--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (medialink
        (filename)
        (file_format_token)
        (file_alignment_token)
        (file_size_token)
        (file_alt_token)
        (file_caption
          (text))))))

================================================================================
Image with alignment and size attributes
================================================================================

[[Image:Logo.png|left|150px]]

--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (medialink
        (filename)
        (file_alignment_token)
        (file_size_token)))))

================================================================================
Media with caption
================================================================================

[[Media:Document.pdf|Download the PDF]]

--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (medialink
        (filename)
        (file_caption
          (text))))))

================================================================================
File with link=attribute
================================================================================

[[File:Animation.gif|frameless|center|link=Main Page]]

--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (medialink
        (filename)
        (file_format_token)
        (file_alignment_token)
        (file_link_token)))))

================================================================================
File with long and complex caption
================================================================================

[[File:Ann Dunham with father and children.jpg|thumb|left|Obama (right) with grandfather [[Stanley Armour Dunham]], mother [[Ann Dunham]], and half-sister [[Maya Soetoro-Ng|Maya Soetoro]], mid-1970s in [[Honolulu]]|alt=Photo of a young Obama sitting on grass with his grandfather, mother, and half-sister.]]
--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (medialink
        (filename)
        (file_format_token)
        (file_alignment_token)
        (file_caption
          (text)
          (wikilink
            (wikilink_page
              (page_name_segment)))
          (text)
          (wikilink
            (wikilink_page
              (page_name_segment)))
          (text)
          (wikilink
            (wikilink_page
              (page_name_segment))
            (page_name_segment))
          (text)
          (wikilink
            (wikilink_page
              (page_name_segment))))
        (file_alt_token)))))

=================================================================================
File caption can be any valid inline content
=================================================================================

[[File:Wappers - Episodes from September Days 1830 on the Place de l’Hôtel de Ville in Brussels.JPG|thumb|left|<span style="white-space:nowrap;">''Episode of the [[Belgian Revolution]] of 1830''</span> (1834), <span style="white-space:nowrap;">by [[Egide Charles Gustave Wappers]],</span> <span style="white-space:nowrap;">[[Royal Museums of Fine Arts of Belgium|Museum of Ancient Art, Brussels]]</span>]]

----------------------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (medialink
        (filename)
        (file_format_token)
        (file_alignment_token)
        (file_caption
          (html_tag
            (html_tag_name)
            (html_attribute
              (html_attribute_name)
              (html_attribute_value))
            (italic
              (text)
              (wikilink
                (wikilink_page
                  (page_name_segment)))
              (text))
            (html_tag_name))
          (text)
          (html_tag
            (html_tag_name)
            (html_attribute
              (html_attribute_name)
              (html_attribute_value))
            (text)
            (wikilink
              (wikilink_page
                (page_name_segment)))
            (text)
            (html_tag_name))
          (text)
          (html_tag
            (html_tag_name)
            (html_attribute
              (html_attribute_name)
              (html_attribute_value))
            (wikilink
              (wikilink_page
                (page_name_segment))
              (page_name_segment))
            (html_tag_name)))))))

================================================================================
File format thumbnail
================================================================================

[[File:Example.jpg|thumbnail]]

--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (medialink
        (filename)
        (file_format_token)))))

================================================================================
File format framed
================================================================================

[[File:Example.jpg|framed]]

--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (medialink
        (filename)
        (file_format_token)))))

================================================================================
File size with width and height
================================================================================

[[File:Example.jpg|100x200px]]

--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (medialink
        (filename)
        (file_size_token)))))

================================================================================
Block table inside a file caption
================================================================================

[[File:x.png|thumb|Voting results

{|
|-
|a
|}
]]

--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (medialink
        (filename)
        (file_format_token)
        (file_caption
          (text)
          (table
            (table_row
              (table_cell
                (table_cell_block
                  (content
                    (text)))))))))))

================================================================================
Alt text containing a wikilink
================================================================================

[[File:X.jpg|thumb|alt=a [[Resurrection of Jesus|risen]] b|''Cap'' by [[Ivanov]]]]

--------------------------------------------------------------------------------

(source_file
  (section
    (paragraph
      (medialink
        (filename)
        (file_format_token)
        (file_alt_token)
        (file_caption
          (italic
            (text))
          (text)
          (wikilink
            (wikilink_page
              (page_name_segment))))))))
